syntax = "proto3";
import "AthenaCommon.proto";

option csharp_namespace = "Pantheon.Athena.Grpc";

service AthenaApiGrpc {
  rpc CreateUserFromDeviceId(CreateUserFromDeviceIdRequest) returns (PantheonIdentity);
  rpc CreateUserFromUsername(CreateUserFromUsernameRequest) returns (PantheonIdentity);

  rpc GetUserByDeviceId(GetUserByDeviceIdRequest) returns (PantheonIdentity);
  rpc GetUserById(GetUserByIdRequest) returns (PantheonIdentity);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (PantheonIdentity);

  rpc DoesUsernameExist(DoesUsernameExistRequest) returns (DoesUsernameExistResponse);
  rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordResponse);
}

message DoesUsernameExistRequest {
  string username = 1;
}

message DoesUsernameExistResponse {
  bool doesExist = 1;
}

message GetUserByDeviceIdRequest {
  string deviceId = 1;
}

message GetUserByIdRequest {
  bytes userId = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message CreateUserFromDeviceIdRequest {
  string deviceId = 1;
}

message CreateUserFromUsernameRequest {
  string username = 1;
  string password = 2;
}

message VerifyPasswordRequest {
  bytes userId = 1;
  string password = 2;
}

message VerifyPasswordResponse {
  bool isValid = 1;
}
